# allCode

./: .gitignore  AGENTS.md  PACKAGING.md  README.md  allcode_test_matrix.json  cmp_matrix.json  pyproject.toml  requirements.txt
examples/: agent-and-command-templates.md  auto-format-hook.yaml  github-action.yml  mcp-servers.md
packaging/: allcode.spec  build_onefile.py
plan/: 00_master_implementation_guide.md  01_open_source_alignment_contracts.md  02_config_entrypoint_plan.md  03_core_contracts_plan.md  04_llm_loop_plan.md  05_routing_policy_plan.md  06_tool_system_plan.md  07_workspace_context_plan.md  08_context_memory_plan.md  09_generation_workflow_plan.md  10_tui_app_plan.md  11_quality_testing_plan.md  12_mvp_execution_plan.md  13_agy_review_feedback.md  14_agy_review_round2_feedback.md  15_codex_tui_alignment_plan.md  16_codex_default_terminal_ui_plan.md  17_model_routed_tool_system_remediation_plan.md  18_open_source_agent_hardening_plan.md  19_open_source_completion_gap_plan.md  20_harness_agent_open_source_completion_plan.md  21_open_source_parity_95_hardening_plan.md  22_remaining_risk_agy_discussion_hardening_plan.md  23_open_source_parity_90_discussion_plan.md  24_open_source_cli_agent_90_plus_plan.md  25_cross_genre_evaluation_hardening_plan.md  26_remaining_open_source_parity_hardening_plan.md  27_validation_repair_convergence_plan.md  28_open_source_warning_reduction_plan.md  29_readonly_approval_terminal_remediation_plan.md  30_source_analysis_language_tooling_hardening_plan.md  31_terminal_paste_tool_visibility_source_analysis_plan.md  (+43 more)
(+326 files in other folders)
